[gd_scene load_steps=4 format=3 uid="uid://vvawrp8mc5xb"]

[ext_resource type="StyleBox" uid="uid://bt8uive6gei3k" path="res://lib/ui_container/ui_container_style.tres" id="1_6jleo"]
[ext_resource type="Script" path="res://lib/hud/quit_confirmation/quit_confirmation.gd" id="1_58e3o"]
[ext_resource type="Texture2D" uid="uid://xv8rsnsaeksv" path="res://generic/textures/corner.png" id="3_7a5ax"]

[node name="QuitConfirmation" type="Panel"]
custom_minimum_size = Vector2(500, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_6jleo")
script = ExtResource("1_58e3o")

[node name="Corner" type="TextureRect" parent="."]
clip_children = 2
z_index = -1
layout_mode = 1
offset_right = 466.0
offset_bottom = 146.0
mouse_filter = 2
texture = ExtResource("3_7a5ax")
expand_mode = 1

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="Box"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "[center]Quit Game[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buttons" type="HBoxContainer" parent="Box"]
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="Box/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Quit"

[node name="Cancel" type="Button" parent="Box/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="Box/Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Box/Buttons/Cancel" to="." method="_on_cancel_button_down"]
